// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner snapshot constrain 1`] = `
<div
  class="text-md font-medium rounded relative p-4 mb-2 border-solid border-0 border-t-4 w-full bg-blue-100 shadow-sm flex flex-row justify-start items-center overflow-hidden max-w-screen-desktop border-gray-700"
  data-test="Banner"
  role="alert"
>
  <aside
    class="mr-2 ml-1"
  />
  <div
    class="flex-1"
  />
</div>
`;

exports[`Banner snapshot default 1`] = `
<div
  class="text-md font-medium rounded relative p-4 mb-2 border-solid border-0 border-t-4 w-full bg-blue-100 shadow-sm flex flex-row justify-start items-center overflow-hidden max-w-screen-desktop border-gray-700"
  data-test="Banner"
  role="alert"
>
  <aside
    class="mr-2 ml-1"
  />
  <div
    class="flex-1"
  />
</div>
`;

exports[`Banner snapshot offer dismiss 1`] = `
<div
  class="text-md font-medium rounded relative p-4 mb-2 border-solid border-0 border-t-4 w-full bg-blue-100 shadow-sm flex flex-row justify-start items-center overflow-hidden max-w-screen-desktop border-gray-700"
  data-test="Banner"
  role="alert"
>
  <aside
    class="mr-2 ml-1"
  />
  <div
    class="flex-1"
  />
  <button
    class="text-dark-link cursor-pointer border-0 bg-transparent pl-2 text-sm font-normal"
    data-test="Banner-closeButton"
  >
    Dismiss
  </button>
</div>
`;

exports[`Banner snapshot variant error 1`] = `
<div
  class="text-md font-medium rounded relative p-4 mb-2 border-solid border-0 border-t-4 w-full bg-blue-100 shadow-sm flex flex-row justify-start items-center overflow-hidden max-w-screen-desktop border-red-600"
  data-test="Banner"
  role="alert"
>
  <aside
    class="mr-2 ml-1"
  >
    <svg
      class="block w-6 text-red-700"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M13.414 12l5.293-5.293a.999.999 0 1 0-1.414-1.414L12 10.586 6.707 5.293a.999.999 0 1 0-1.414 1.414L10.586 12l-5.293 5.293a.999.999 0 1 0 1.414 1.414L12 13.414l5.293 5.293a.997.997 0 0 0 1.414 0 .999.999 0 0 0 0-1.414L13.414 12z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </aside>
  <div
    class="flex-1"
  />
</div>
`;

exports[`Banner snapshot variant success 1`] = `
<div
  class="text-md font-medium rounded relative p-4 mb-2 border-solid border-0 border-t-4 w-full bg-blue-100 shadow-sm flex flex-row justify-start items-center overflow-hidden max-w-screen-desktop border-gtmgreen-500"
  data-test="Banner"
  role="alert"
>
  <aside
    class="mr-2 ml-1"
  >
    <svg
      class="text-dark-success block w-6"
      fill="currentColor"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M5.91 10.496L3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.493-.09l7-8a1 1 0 1 0-1.572-1.235L5.91 10.496z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </aside>
  <div
    class="flex-1"
  />
</div>
`;

exports[`Banner snapshot variant warning 1`] = `
<div
  class="text-md font-medium rounded relative p-4 mb-2 border-solid border-0 border-t-4 w-full bg-blue-100 shadow-sm flex flex-row justify-start items-center overflow-hidden max-w-screen-desktop border-orange-300"
  data-test="Banner"
  role="alert"
>
  <aside
    class="mr-2 ml-1"
  >
    <svg
      class="text-dark-warning block w-6"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2zm0 2a8 8 0 1 0 0 16 8 8 0 0 0 0-16zm0 12a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm0-10a1 1 0 0 1 1 1v6a1 1 0 1 1-2 0V7a1 1 0 0 1 1-1z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </aside>
  <div
    class="flex-1"
  />
</div>
`;
